--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="header">
         <nav class='header-container'>
             <ul>
-                <li><a href="www.gmail.com">Gmail</a></li>
+                <li><a href="mail.google.com">Gmail</a></li>
                 <li><a href="photos.google.com">Images</a></li>
                 <figure class="logo-suite"><img src="https://i.imgur.com/4DcNwZV.jpg" alt="G Suite"></figure>
                 <figure class="perfil"><img src="https://i.imgur.com/nKpfrKs.jpg" alt="Perfil"></figure>
