Cambio a la etiqueta nav

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <ul>
                 <li><a href="mail.google.com">Gmail</a></li>
                 <li><a href="photos.google.com">Images</a></li>
-                <figure class="logo-suite"><img src="https://i.imgur.com/4DcNwZV.jpg" alt="G Suite"></figure>
-                <figure class="perfil"><img src="https://i.imgur.com/nKpfrKs.jpg" alt="Perfil"></figure>
+                <li><a href="">Icon</a></li><figure class="logo-suite"><img src="https://i.imgur.com/4DcNwZV.jpg" alt="G Suite"></figure>
+                <li><a href="">Photo</a></li><figure class="perfil"><img src="https://i.imgur.com/nKpfrKs.jpg" alt="Perfil"></figure>
             </ul>
         </nav>
     </header>
