--- a/index.html
+++ b/index.html
@@ -9,46 +9,15 @@
     <link rel="shortcut icon" href="https://i.imgur.com/DJ8MxoP.png">
 </head>
 <body>
-    <header class="header">
-        <nav class='header-container'>
-            <ul>
+    <header>
+        <nav>
+            <ul class="nav-right-section">
                 <li><a href="mail.google.com">Gmail</a></li>
                 <li><a href="photos.google.com">Images</a></li>
-                <li><a href="">Icon</a></li><figure class="logo-suite"><img src="https://i.imgur.com/4DcNwZV.jpg" alt="G Suite"></figure>
-                <li><a href="">Photo</a></li><figure class="perfil"><img src="https://i.imgur.com/nKpfrKs.jpg" alt="Perfil"></figure>
+                <li><a href="">Icon</a></li>
+                <li><a href="">Photo</a></li>
             </ul>
         </nav>
     </header>
-    <main class="main">
-        <figure class="main-logo">
-            <img src="https://i.imgur.com/SWCcDWd.png" alt="Logo_Google">
-        </figure>
-        <input type="text" class="main-input">
-        <div>
-            <button type="button" class="main-search">Buscar con Google</button>
-            <button type="button" class="main-lucky">Me siento con suerte</button>    
-        </div>
-        <p>Ofrecido por Google en: <a href="#">English</a></p>
-    </main>
-    <footer class="footer">
-        <div class="footer-location">
-            <p>Guatemala</p>
-        </div>
-        <div class="footer-left">
-            <ul>
-                <li><a href="https://ads.google.com/intl/es-419_gt/home/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Publicidad</a></li>
-                <li><a href="https://smallbusiness.withgoogle.com/intl/es-419/help/">Negocios</a></li>
-                <li><a href="https://about.google/?utm_source=google-GT&utm_medium=referral&utm_campaign=hp-footer&fg=1">Sobre Google</a></li>
-                <li><a href="https://www.google.com/search/howsearchworks/?fg=1">Cómo funciona la Búsqueda</a></li>
-            </ul>
-        </div>
-        <div class="footer-right">
-            <ul>
-                <li><a href="https://policies.google.com/privacy?hl=es-419&fg=1">Privacidad</a></li>
-                <li><a href="https://policies.google.com/terms?hl=es-419&fg=1">Condiciones</a></li>
-                <li><a href="">Preferencias</a></li>
-            </ul>
-        </div>
-    </footer>
 </body>
 </html>
