Adicion de icono de Gsuite y foto de perfil

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,16 +9,20 @@
     <link rel="stylesheet" href="./css/main.css">
     <link rel="shortcut icon" href="https://i.imgur.com/DJ8MxoP.png">
 </head>
+
 <body>
     <header>
         <nav>
             <ul class="nav-right-section">
                 <li><a href="mail.google.com">Gmail</a></li>
                 <li><a href="photos.google.com">Images</a></li>
-                <li><a href="">Icon</a></li>
-                <li><a href="">Photo</a></li>
+                <li class="menu-icon"><a href=""></a></li>
+                <li><a href=""><img
+                            src="https://lh3.googleusercontent.com/ogw/ADGmqu8zLnXNRpNss7aGqnRR__gLfjjlTyiS3LiVF_2y=s32-c-mo"
+                            alt=""></a></li>
             </ul>
         </nav>
     </header>
 </body>
+
 </html>
