--- a/index.html
+++ b/index.html
@@ -6,7 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Google</title>
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/mobile.css"/>
+    <!-- <link rel="stylesheet" 
+          href="./css/tablet.css" 
+          media="screen and (min-width: 600px)" 
+    />
+    <link rel="stylesheet" 
+          href="./css/main.css" 
+          media="screen and (min-width: 900px)" 
+    /> -->
     <link rel="shortcut icon" href="https://i.imgur.com/DJ8MxoP.png">
 </head>
 
